--- a/index.html
+++ b/index.html
@@ -1,35 +1,11 @@
-<!-- TODO 1: Create the HTML Boilerplate -->
 
-<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
-
-<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
-
-<!-- TODO 4: Add titles/subtitles etc. -->
-
-<!-- TODO 5: Add a link to the project pages -->
-
-<!-- TODO 6: Add images to show the project previews
-HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
-
-<!-- TODO 7: Add the Contact Me and About Me page links -->
-
-<!DOCTYPE html>
-<html lang="eng">
-    <head>
-        <meta charset="UTF-8">
-        <title>Rafeena's Websites</title>
-    </head>
-    
-    <body>
-        <h1>Rafeena T's Portfolio</h1>
-        <h2>I am a Web Developer</h2>
-        <hr />
-        <a href="./public/movie ranking.html">Movie Ranking project</a>
-        <img src="./movie.png" />
-        <a href="/public/birthday invite.html">Birthday Invite Project</a>
-        <img src="./birthday.png" />
-        <a href="./public/about.html">About me</a> 
-        <a href="./public/contact.html">Contact me</a>
-    </body>
-</html>
+<h1>It's my Birthday!!!</h1>
+<h2>On the 3rd of November!</h2>
+<img src="https://raw.githubusercontent.com/appbrewery/webdev/main/birthday-cake3.4.jpeg" />
+<h3>What to bring:</h3>
+<ul>
+    <li>Any gift you desire to buy me.</li>
+    <li>Glass or tumblr for you</li>
+    <li>Party hat for you</li>
+<h3>This is where you need to go:</h3>
+<a href="https://www.google.com/maps/@35.7040744,139.5577317,3a,75y,289.6h,87.01t,0.72r/data=!3m6!1e1!3m4!1sgT28ssf0BB2LxZ63JNcL1w!2e0!7i13312!8i6656">Birthday party address</a>
